[package]
name = "stream-index"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.75"
noodles = { version = "0.52.0", features = ["async", "bam", "sam", "csi"] }
object_store = { version = "0.7.1", features = ["http", "aws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.9"
url = "2.4.1"
